fix swagger api docs
